# OpenCobolIDE

./: .bzrignore  .coveragerc  .gitignore  .gitmodules  .travis.yml  AUTHORS.rst  CMakeLists.txt  CONTRIBUTING.rst  LICENSE  MANIFEST.in  OpenCobolIDE  OpenCobolIDE.pyw  README.md  README.rst  conftest.py  expectstub.py  freeze.py  freeze_osx.py  freeze_setup.py  make_release_osx.sh  make_release_win32.py  makeppa.sh  open-cobol-ide  pytest.ini  pyuic.cfg  requirements.txt  runtests.py  setup.cfg  setup.iss  setup.iss.in  setup.py  stdeb.cfg  tox.ini  win_console.py
.cache/v/cache/: lastfailed
.hackedit/: run.json
OpenCobol/: readme.rst
OpenCobol/config/: bs2000.conf  cobol2002.conf  cobol85.conf  default.conf  ibm.conf  mf.conf  mvs.conf
OpenCobol/copy/: FileStat-Msgs.cpy  STREAMIOError.cpy  STREAMIOcb.cpy  screenio.cpy
OpenCobol/include/: db.h  db_185.h  db_cxx.h  gmp.h  libcob.h
OpenCobol/include/libcob/: byteswap.h  call.h  codegen.h  common.h  exception.def  fileio.h  intrinsic.h  move.h  numeric.h  screenio.h  strings.h  system.def  termio.h
OpenCobol/lib/: libcob.la  libdb-5.0.la  libgmp.la
OpenCobolIDE/cobcide/: __init__.py  tab_manager.py
OpenCobolIDE/cobcide/ui/: ide.ui  ide_ui.py
cmake/: DebSourcePPA.cmake
cobcide/: __init__.py  cc.py  cobol.py  desktop_entry.py  dialogs.py  editor.py  errors_manager.py  home_page.py  main.py  modes.py  settings.py  tab_manager.py  tabs.py  toupper_mode.py  window.py
cobcide/ui/: __init__.py  dlg_about.ui  dlg_about_ui.py  dlg_file_type.ui  dlg_file_type_ui.py  dlg_preferences.ui  dlg_preferences_ui.py  ide.qrc  ide.ui  ide_rc.py  ide_ui.py  translate_ui.py
cobcide/ui/rc/: LICENSES.txt
doc/: Makefile  make.bat  make_html.py
doc/source/: advanced.rst  conf.py  contribute.rst  download.rst  faq.rst  getting_started.rst  index.rst  license.rst  settings.rst  tipsandtricks.rst  whats_new.rst
forms/: dlg_about.ui  dlg_check_compiler.ui  dlg_cobc_help.ui  dlg_file_type.ui  dlg_github_login.ui  dlg_preferences.ui  dlg_report_bug.ui  ide.qrc  ide.ui
forms/rc/: LICENSES.txt
oci/: __init__.py  cobc.py  cobol.py  code_completion.py  compiler.py  constants.py  dialogs.py  dlg.py  editor.py  logger.py  main.py  main_window.py  modes.py  parser.py  services.py  settings.py  utils.py
oci/backend/: compiler.py  parser.py  server.py  workers.py
oci/backend/pic_parser/: README.rst  __init__.py  cobol.py
oci/frontend/: compiler.py  dialogs.py  editors.py  home.py  logger.py  main_window.py  modes.py  panels.py  services.py  widgets.py
oci/frontend/ui/: __init__.py  compile_ui.py  dlg_about.ui  dlg_about_ui.py  dlg_file_type_ui.py  dlg_preferences.ui  dlg_preferences_ui.py  ide.qrc  ide.ui  ide_rc.py  ide_ui.py
oci/pic_parser/: __init__.py
oci/python_cobol/: cobol.py
oci/ui/: __init__.py  compile_qrc.py  compile_ui.py  dlg_about.ui  dlg_about_ui.py  dlg_file_type.ui  dlg_file_type_ui.py  dlg_preferences.ui  dlg_preferences_ui.py  ide.qrc  ide.ui  ide_pyqt_rc.py  ide_rc.py  ide_ui.py  translate_ui.py
oci/ui/rc/: LICENSES.txt
oci_designer_plugins/: __init__.py  cobol_plugin.py
oci_old/: __init__.py  constants.py  main.py  settings.py  utils.py
oci_old/backend/: compiler.py  parser.py  server.py  workers.py
oci_old/backend/pic_parser/: __init__.py
oci_old/frontend/: compiler.py  dialogs.py  editors.py  home.py  logger.py  main_window.py  modes.py  panels.py
oci_old/frontend/ui/: __init__.py  dlg_about_ui.py  dlg_file_type_ui.py  ide_rc.py  ide_ui.py
open_cobol_ide/: __init__.py  app.py  backend.py  compiler.py  compilers.py  constants.py  enums.py  generic-backend.py  linter.py  logger.py  main.py  memoize.py  msvc.py  settings.py  system.py
open_cobol_ide/compilers/: __init__.py  base.py  gnu_cobol.py  utils.py
open_cobol_ide/controllers/: __init__.py  base.py  cobol.py  edit.py  file.py  help.py  home.py  view.py
open_cobol_ide/extlibs/: github.py  readme.rst
open_cobol_ide/extlibs/pyqode/cobol/: __init__.py
open_cobol_ide/extlibs/pyqode/core/: __init__.py  cache.py  icons.py  share.py
open_cobol_ide/extlibs/pyqode/qt/: QtCore.py  QtDesigner.py  QtGui.py  QtNetwork.py  QtTest.py  QtWebWidgets.py  QtWidgets.py  __init__.py
open_cobol_ide/extlibs/qcrash/: __init__.py  _hooks.py  api.py  qt.py
open_cobol_ide/extlibs/qcrash/_dialogs/: gh_login.py  report.py  review.py
open_cobol_ide/extlibs/qcrash/_extlibs/: __init__.py  github.py
open_cobol_ide/extlibs/qcrash/_forms/: dlg_github_login_ui.py  dlg_report_bug_ui.py  dlg_review_ui.py  (+1 more)
open_cobol_ide/view/: __init__.py  main_window.py  widgets.py
open_cobol_ide/view/dialogs/: __init__.py  about.py  check_compiler.py  cobc_help.py  github_login.py  new_file.py  preferences.py  report_bug.py
open_cobol_ide/view/editors/: __init__.py  cobol.py  generic.py  text.py
open_cobol_ide/view/forms/: __init__.py  dlg_about_ui.py  dlg_check_compiler_ui.py  dlg_cobc_help_ui.py  dlg_file_type_ui.py  dlg_github_login_ui.py  dlg_preferences_ui.py  dlg_report_bug_ui.py  ide_rc.py  ide_ui.py
scripts/: freeze.py  install-qt.py  make_deb.sh  make_release_osx.sh  makeppa.sh  update_extlibs.py
scripts/git-hooks/: copy_hooks.py
share/: Info.plist  OpenCobolIDE.desktop  changelog  copyright  open-cobol-ide.1  open-cobol-ide.desktop  open-cobol-ide.desktop.in  silex-icon.icns
share/git-hooks/: copy_hooks.py  pre-commit  readme.rst
test/: test_app.py  test_compiler.py  test_functional.py  test_integration.py  test_parser.py  test_pic_parser.py
test/testfiles/: HelloWorld  HelloWorld.cbl  HelloWorld.pco  HelloWorldFree.cbl  HelloWorldLatin1.cbl  MALFORMED.cbl  TEST-PRINTER.cbl  VIRTUAL-PRINTER.cbl  test  test.cpy
test/testfiles/path with spaces/: HelloWorld.cbl
tools/: copydebfiles.py
tools/git-hooks/: post-commit  pre-commit.py
(+120 files in other folders)
